<resources>
    <string name="app_name">La Hielera</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalogo_fragment">Catalogo</string>
    <string name="pedidos_fragment">Mis pedidos</string>
    <string name="perfil_fragment">Mi perfil</string>
    <string name="soles_simbolo">S/</string>
    <string name="precio_format">S/ d%</string>
    <string name="detalle_producto">Detalles del producto</string>
    <string name="agregar_al_carro">Agregar</string>
    <string name="label_cantidad">CANTIDAD</string>
    <string name="label_precio">PRECIO</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ingresa_email_texto">Correo electrónico</string>
    <string name="ingresa_pass_texto">Contraseña</string>
    <string name="login_text">ingresar</string>
    <string name="login_register_text">¿No esta registrado? Registrese aqui.</string>
    <string name="ingresa_pass2_texto">Repetir la contraseña</string>
    <string name="register_text">Registrarse</string>
    <string name="cerrar_session_text">Cerrar sesion</string>
    <string name="detalle_password">La contraseña debe tener:
        <br>Una mayúscula.</br>
        <br>Un número.</br>
        <br>Mínimo 8 caracteres</br> </string>
    <string name="carrito_label">Mi carrito</string>
    <string name="checkout_text">Checkout</string>
    <string name="formato_precio">Total: S/ %.2f</string>
    <string name="formato_subtotal">Pedido:  S/ %.2f</string>
    <string name="formato_total">TOTAL A PAGAR: S/ %.2f</string>
    <string name="formato_pagar">PAGAR S/ %.2f</string>
    <string name="formato_envio">Envio:    S/ %.2f</string>
    <string name="formato_cantidad">%d</string>
    <string name="carrito_vacio">El carrito de compras esta vacio</string>
    <string name="val_buscar">Buscar...</string>
    <string name="catalogo_busqueda_vacia">No se encontraron productos que coincidan.</string>
    <string name="perfil_nombres">Nombres</string>
    <string name="perfil_paterno">Apellidos</string>
    <string name="perfil_telefono">Celular</string>
    <string name="perfil_documento">Nº de documento</string>
    <string name="direcciones_text">Mis direcciones</string>
    <string name="direcciones_label">Agrega o escoge una dirección</string>
    <string name="agregar_direccion_text">Agregar direccion</string>
    <string name="direccion_text">Avenida/Jiron/Calle</string>
    <string name="referencia_text">Referencia</string>
    <string name="distrito_text">Distrito</string>
    <string name="provincia_text">Provincia</string>
    <string name="departamento_text">Departamento</string>
    <string name="guardar_text">Guardar</string>
    <string name="direciones_fragment">Mis direcciones</string>
    <string name="nueva_direccion">Nueva dirección</string>
    <string name="sin_direcciones">No tienes direcciones registradas</string>
    <string name="numero_text">Número</string>
    <string name="action_predeterminada">Predeterminada</string>
    <string name="action_elimiar">Eliminar</string>
    <string name="_8942">⋮</string>
    <string name="action_editar">Editar</string>
    <string name="enviar_text">ENVIAR A:</string>
    <string name="entregar_text">DESTINATARIO:</string>
    <string name="total_text">PAGO:</string>
    <string name="checkout_pay_btn">confirmar</string>
    <string name="checkout_title">Resumen del pedido</string>
    <string name="checkout_direccion">No hay direcciones registradas</string>
    <string name="cliente_checkout">Agregue sus datos</string>
    <string name="pago_efectivo">En efectivo</string>
    <string name="pago_tarjeta">Con tarjeta</string>
    <string name="lista_direcciones_checkout">AGREGAR / CAMBIAR DIRECCION</string>
    <string name="sin_direccion_prederterminada">--</string>
    <string name="tarjeta_numero_text">Numero de tarjeta</string>
    <string name="tarjeta_fecha_text">MM/AA</string>
    <string name="tarjeta_cvv_text">CVV</string>
    <string name="tarjeta_nombre_text">Nombres</string>
    <string name="tarjeta_apellidos_text">Apellidos</string>
    <string name="tarjeta_mes_text">MM</string>
    <string name="tarjeta_anio_text">AA</string>
    <string name="tarjeta_email_text">Correo electronico</string>
    <string name="label_fecha">Fecha:</string>
    <string name="label_total_pedido">Total S/.</string>
    <string name="channel_name">entregas</string>
    <string name="channel_description">Pedido en camino a su domicilio</string>
    <string name="pedido_detalle">Detalle:</string>

    <string-array name="documento_tipo">
        <item>DNI</item>
        <item>CE</item>
        <item>Otro</item>
    </string-array>
</resources>