<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/carrito_label" />
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_catalogo"
            android:title="@string/catalogo_fragment" />

        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/pedidos_fragment" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account"
            android:title="@string/perfil_fragment" />

        <item
            android:id="@+id/cerrar_session"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_session_text" />
    </group>
</menu>