<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        tools:context=".ui.perfil.Perfil_Fragment">

        <ProgressBar
            android:id="@+id/progress_bar_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="342dp" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undraw_location_review_dmxd"
            app:layout_constraintBottom_toTopOf="@+id/location_direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_direccion"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toTopOf="@+id/location_referencia"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_numero"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toBottomOf="@+id/location_direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/location_direccion">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_referencia"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toTopOf="@+id/location_distrito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_direccion"
            app:startIconTint="@color/azul">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/referencia_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_distrito"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toTopOf="@+id/location_provincia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_referencia"
            app:startIconTint="@color/azul">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distrito_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_provincia"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toTopOf="@+id/location_departamento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_distrito"
            app:startIconTint="@color/azul">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/provincia_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_departamento"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/azul"
            app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
            app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
            app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
            app:boxCornerRadiusTopStart="@dimen/corner_25dp"
            app:boxStrokeColor="@color/azul"
            app:hintTextColor="@color/azul"
            app:layout_constraintBottom_toTopOf="@+id/boton_guardar_direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_provincia"
            app:startIconTint="@color/azul">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departamento_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton


            android:id="@+id/boton_guardar_direccion"
            style="@style/button_blue_style"
            android:layout_marginBottom="24dp"
            android:text="@string/guardar_text"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>