<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:layout_margin="@dimen/margin_16dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_recurso_6"
        app:layout_constraintBottom_toTopOf="@+id/mail_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail_login"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/azul"
        app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
        app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
        app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
        app:boxCornerRadiusTopStart="@dimen/corner_25dp"
        app:boxStrokeColor="@color/azul"
        app:hintTextColor="@color/azul"
        app:layout_constraintBottom_toTopOf="@+id/pass_login"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/azul">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ingresa_email_texto" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_login"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/azul"
        app:boxCornerRadiusBottomEnd="@dimen/corner_25dp"
        app:boxCornerRadiusBottomStart="@dimen/corner_25dp"
        app:boxCornerRadiusTopEnd="@dimen/corner_25dp"
        app:boxCornerRadiusTopStart="@dimen/corner_25dp"
        app:boxStrokeColor="@color/azul"
        app:hintTextColor="@color/azul"
        app:layout_constraintBottom_toTopOf="@+id/boton_login"
        app:layout_constraintTop_toBottomOf="@+id/mail_login"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/azul">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ingresa_pass_texto" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/boton_login"
        style="@style/button_blue_style"
        android:text="@string/login_text"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/asdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_login" />

    <View
        android:id="@+id/asdf"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asdf" />

    <TextView
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login_register_text"
        android:textColor="@color/azul"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_login" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>